# multiday-suite2p-public

./: pyproject.toml  setup.py
bash-scripts/: extract_session_job.sh
multiday_suite2p/: __init__.py  cli.py  gui.py  io.py  process.py  settings.py  transform.py  utils.py
multiday_suite2p/cluster/: __init__.py  extract.py  io.py  jobs.py
notebooks/: multiday_registration.ipynb
settings/: template_alignment_settings.yml  template_file_info.yml
